--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,50 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 body {
-  background-color: #f3f4f6;
+  height: 100vh;
+  background-image: url(https://wallpapers.com/images/featured/islamic-xptqk5xw6adpezzv.jpg);
+  background-size: cover;
+  background-position: center;
   font-family: Arial, sans-serif;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
-  margin: 0;
 }
 
 .container {
+
   text-align: center;
-  background-color: white;
+  background-color: transparent;
+  background-size: cover;
+  background-position: center;
+  color: #fff;
   padding: 40px;
   border-radius: 20px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 350px;
 }
 
 .counter {
-  font-size: 24px;
-  margin-bottom: 20px;
-  color: #333;
-  border: 3px solid #007bff;
-  display: inline-block;
-  padding: 20px;
-  border-radius: 50%;
-  width: 120px;
-  height: 120px;
-  line-height: 120px;
-  background-color: #e0f7fa;
+  font-size: 66px;
+  color: #ffffff;
+  max-width: 120px;
+
 }
 
 .button {
-  padding: 15px 30px;
+  padding: 30px 60px;
+  background-image: url(../src/images/islam.png);
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
   font-size: 1.5rem;
-  background-color: #007bff;
+  background-color: #ffffff;
   color: white;
   border: none;
   border-radius: 50px;
@@ -51,9 +59,12 @@ body {
 }
 
 .reset-button {
-  padding: 15px 30px;
+  padding: 15px 50px;
   font-size: 1.5rem;
-  background-color: #ff0000;
+  background-image: url(./images/pattern.png);
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
   color: white;
   border: none;
   border-radius: 50px;
@@ -69,4 +80,22 @@ body {
 
 .hidden-audio {
   display: none;
+}
+@media only screen and (max-width: 600px) {
+  .counter {
+    font-size: 50px;
+    max-width: 260px;
+  }
+  .container {
+    padding: 60px;
+    margin-bottom: 250px;
+  }
+  .button {
+    padding: 15px 30px;
+    font-size: 1.2rem;
+  }
+  .reset-button {
+    padding: 15px 30px;
+    font-size: 1.2rem;
+  }
 }
